fix: long lines go off-screen

--- a/react-redux/src/pages/Details/Details.scss
+++ b/react-redux/src/pages/Details/Details.scss
@@ -8,4 +8,8 @@
 .info {
   width: 80%;
   margin: 0;
+
+  .json {
+    white-space: pre-wrap;
+  }
 }
